--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install --production
+RUN npm cache clean --force && rm -rf node_modules && npm install --production
 
 # Copy the rest of the application code
 COPY . .
