updated test in pipeline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Run tests
       - name: Run tests
-        run: npm test
+        run: npm test --if-present
 
   deploy:
     needs: build-and-test
